content/stylesheets/application.sass
@import "compass/reset/utilities"
@import "colors"
@import "fonts"

@include reset-html5

/* Reset */
html,body
  @include reset-box-model

body
  background: $frame_background
  color: $frame_color
  font-family: $body_font
  a
    color: $frame_color
    &:hover, &:visited, &:focus
      color: $frame_color

header, footer
  padding: 1em

header
  a.title
    text-decoration: none
    &:hover
      text-decoration: none

.content
  padding: 1em

h1
  margin: 0 0 0.33em 0

h2, h3, h4, h5, h6
  margin: 0.33em 0 0.33em 0

h1
  font-size: 3em

p
  margin-bottom: 0

/* Layout */
.container
  margin: 0 auto
  width: 960px

/* Styling */
header, footer
  background: transparent

header
  nav
    overflow: hidden
    .nav-list
      list-style-type: none
      margin: 0
      padding: 0
      li
        float: left
        margin: 1em 1em
        &:first-child
          margin-left: 0

h1, h2, h3, h4, h5, h6
  font-family: $heading_font

.content
  background: $body_background
  color: $body_color

footer
  .author
    float: left
    width: 25%
  .projects
    float: left
    width: 75%
    .same-status
      float: left
      width: 50%
    .different-status
      float: right
      width: 49%

.contact
  list-style-type: none
  padding: 0
  li
    margin: 0.25em 0

/* Projects */
.project-list
  list-style-type: none
  padding: 0
  li
    margin: 0 0 1em 0
    padding: 0 0 1.5em 0

footer .project-list
  li
    padding: 0

.project-activity
  margin: 2em

article
  a
    color: #b00
    &:visited, &:hover, &:focus
      color: #b00
  header, footer
    padding: 0
  header
    border-bottom: 1px solid #aaa
    padding-bottom: 1em

.logo
  float: left
  margin: 0 1em 0 0

.status
  font-family: $heading_font
  display: inline-block
  height: 2em
  line-height: 2em
  padding: 0 0.5em
  text-align: center
  text-transform: uppercase
  &.deployed
    background: #00c909 // green
    color: $light_color
  &.development
    background: #c90009 // red
    color: $light_color
  &.idea
    background: #000 // black
    color: $light_color
  &.retired
    background: #008bdb // blue
    color: $light_color
  &.back-burner
    background: #6a4724 // brown
    color: $light_color

.description
  h3, h4, h5, h6
    margin: 1em 0

